--- a/BankManagement.csproj
+++ b/BankManagement.csproj
@@ -92,6 +92,12 @@
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\GraphicsExtension.cs" />
+    <Compile Include="View\FeedbackForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FeedbackForm.Designer.cs">
+      <DependentUpon>FeedbackForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\InfoStaffForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FeedbackForm.resx">
+      <DependentUpon>FeedbackForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\InfoStaffForm.resx">
       <DependentUpon>InfoStaffForm.cs</DependentUpon>
@@ -203,6 +212,8 @@
     <None Include="Resources\user_icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\star_yellow.png" />
+    <None Include="Resources\star_white.png" />
     <None Include="Resources\user.png" />
     <None Include="Resources\x-button.png" />
     <None Include="Resources\update-user1.png" />
