add code form feedback

--- a/BankManagement.csproj
+++ b/BankManagement.csproj
@@ -62,12 +62,15 @@
     <Compile Include="Model\CustomerAccountWithInforRepository.cs" />
     <Compile Include="Model\CustomerInfor.cs" />
     <Compile Include="Model\CustomerInforRepository.cs" />
+    <Compile Include="Model\FeedBack.cs" />
+    <Compile Include="Model\FeedBackReponsitory.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Model\LogRepository.cs" />
     <Compile Include="Model\Transaction.cs" />
     <Compile Include="Model\TransactionReponsitory.cs" />
     <Compile Include="ViewModel\AccountViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
+    <Compile Include="ViewModel\FeedBackViewModel.cs" />
     <Compile Include="ViewModel\InfoStaffViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\LogViewModel.cs" />
